minor legibility fixes

--- a/src/client/css/homepage/_blog-section.scss
+++ b/src/client/css/homepage/_blog-section.scss
@@ -10,7 +10,7 @@
     height: 36px;
     line-height: 36px;
     border-radius: 100px;
-    background: #f7f7f7;
+    background: #f2f2f2;
     font-size: 13px;
     font-weight: 500;
     color: $trans-light;
